# UniwersalnaMaszynaCyfrowa

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clean.html
include/: computer.hpp  dclock.hpp  drawable.hpp  entity.hpp  mafs.hpp  player.hpp  room.hpp  ui.hpp  window.hpp
include/puzzles/: puzzle.hpp  puzzles.hpp  wires.hpp
res/img/: elwro.aseprite  fatguy.aseprite  playerph.aseprite
src/: computer.cpp  entity.cpp  main.cpp  player.cpp  room.cpp  test.cpp  ui.cpp  window.cpp
src/puzzles/: puzzle.cpp  wires.cpp
